--- a/src/main/resources/templates/Dashboard/prof.html
+++ b/src/main/resources/templates/Dashboard/prof.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="container my-3">
-    <h1 class="text-center mb-3">welcome admin</h1>
-
+    <h1 class="text-center mb-3">welcome prof</h1>
+    <input readonly class="form-control-plaintext" th:value="${userId}">
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
