--- a/src/main/resources/templates/Dashboard/admin/Managefields.html
+++ b/src/main/resources/templates/Dashboard/admin/Managefields.html
@@ -23,7 +23,10 @@
             <a class="nav-link" href="/Dashboard/admin/ManageProfs">Professors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="/Dashboard/admin/Managefields">Fields</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/Managemodules">Modules</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
