--- a/src/main/resources/templates/Dashboard/admin/Managefields.html
+++ b/src/main/resources/templates/Dashboard/admin/Managefields.html
@@ -69,10 +69,14 @@
            onclick="return confirm('Are you sure')">
           Delete
         </a>
+        <a class="btn btn-secondary btn-sm"
+           th:href="@{/Dashboard/admin/fieldModules/{fieldId}(fieldId=${field.id})}">
+          Show Modules
+        </a>
       </td>
-
     </tr>
     </tbody>
+
   </table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
