--- a/src/main/resources/templates/Dashboard/admin/fieldModules.html
+++ b/src/main/resources/templates/Dashboard/admin/fieldModules.html
@@ -9,6 +9,10 @@
 <body>
 <div class="container my-3">
   <h1 class="text-center mb-3">Modules in Field: <span th:text="${field.name}"></span></h1>
+  <a class="btn btn-primary" th:href="@{/Dashboard/admin/addModuleToField/{fieldId}(fieldId=${field.id})}">
+    Add Module
+  </a>
+
   <a class="btn btn-primary" href="/Dashboard/admin/Managefields">Back to Fields</a>
   <table class="table">
     <thead>
