--- a/src/main/resources/templates/Dashboard/admin/createModule.html
+++ b/src/main/resources/templates/Dashboard/admin/createModule.html
@@ -5,14 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Module</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .dropdown-menu {
-            max-height: 300px; /* Adjust height as needed */
-            overflow-y: auto; /* Add scroll for large lists */
-        }
-    </style>
 </head>
-
 <body>
 <div class="container my-3">
     <div class="row">
@@ -22,38 +15,21 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Module Name</label>
                     <div class="col-sm-8">
-                        <input class="form-control" th:field="${moduleDto.name}">
-                        <p th:if="${#fields.hasErrors('name')}"
-                           th:errorclass="text-danger"
-                           th:errors="${moduleDto.name}"></p>
+                        <input class="form-control" th:field="*{name}">
+                        <p th:if="${#fields.hasErrors('name')}" class="text-danger" th:errors="*{name}"></p>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Module Code</label>
                     <div class="col-sm-8">
-                        <input class="form-control" th:field="${moduleDto.code}">
-                        <p th:if="${#fields.hasErrors('code')}"
-                           th:errorclass="text-danger"
-                           th:errors="${moduleDto.code}"></p>
+                        <input class="form-control" th:field="*{code}">
+                        <p th:if="${#fields.hasErrors('code')}" class="text-danger" th:errors="*{code}"></p>
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <label class="col-sm-4 col-form-label">Select Field</label>
-                    <div class="col-sm-8">
-                        <select class="form-control" th:field="${moduleDto.fieldId}">
-                            <option value="" disabled selected>Select a field</option>
-                            <option th:each="field : ${fields}" th:value="${field.id}" th:text="${field.name}"></option>
-                        </select>
-                        <p th:if="${#fields.hasErrors('fieldId')}"
-                           th:errorclass="text-danger"
-                           th:errors="${moduleDto.fieldId}"></p>
-                    </div>
-                </div>
-
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Select Semester</label>
                     <div class="col-sm-8">
-                        <select class="form-control" th:field="${moduleDto.semester}">
+                        <select class="form-control" th:field="*{semester}">
                             <option value="S1">S1</option>
                             <option value="S2">S2</option>
                             <option value="S3">S3</option>
@@ -61,12 +37,9 @@
                             <option value="S5">S5</option>
                             <option value="S6">S6</option>
                         </select>
-                        <p th:if="${#fields.hasErrors('semester')}"
-                           th:errorclass="text-danger"
-                           th:errors="${moduleDto.semester}"></p>
+                        <p th:if="${#fields.hasErrors('semester')}" class="text-danger" th:errors="*{semester}"></p>
                     </div>
                 </div>
-
                 <div class="row mb-3">
                     <div class="row">
                         <div class="offset-sm-4 col-sm-4 d-grid">
