ommit commit vomit hhhhh

--- a/src/main/resources/templates/Dashboard/admin/index.html
+++ b/src/main/resources/templates/Dashboard/admin/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="/Dashboard/admin/Managemodules">Modules</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Dashboard/admin/ShowAllElements">Show All Elements</a>
+            <a class="nav-link" href="/Dashboard/admin/ShowAllElements">Elements</a>
           </li>
 
           <li class="nav-item dropdown">
