--- a/src/main/resources/templates/Dashboard/admin/Managefields.html
+++ b/src/main/resources/templates/Dashboard/admin/Managefields.html
@@ -28,6 +28,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/Dashboard/admin/Managemodules">Modules</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/ShowAllElements">Elements</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
