--- a/src/main/resources/templates/Dashboard/admin/ShowAllElements.html
+++ b/src/main/resources/templates/Dashboard/admin/ShowAllElements.html
@@ -8,6 +8,48 @@
 </head>
 <body>
 <div class="container my-3">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/Dashboard/admin">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/ManageProfs">Professors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/Managefields">Fields</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/Managemodules">Modules</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Dashboard/admin/ShowAllElements">Elements</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
   <h1 class="text-center mb-3">All Module Elements</h1>
   <a class="btn btn-primary mb-3" href="/Dashboard/admin/createSharedElement">
     Create Shared Element
