ommit commit vomit hhhhh

--- a/src/main/resources/templates/Dashboard/admin/ShowElements.html
+++ b/src/main/resources/templates/Dashboard/admin/ShowElements.html
@@ -10,6 +10,12 @@
 <div class="container my-3">
     <h1 class="text-center mb-3">Elements in Module: <span th:text="${module.name}"></span></h1>
 
+    <!-- Add Element button -->
+    <a class="btn btn-primary mb-3"
+       th:href="@{/Dashboard/admin/createElement/{moduleId}(moduleId=${module.id})}">
+        Add Element
+    </a>
+
     <table class="table table-striped">
         <thead>
         <tr>
