ommit commit vomit hhhhh

--- a/src/main/resources/templates/Dashboard/admin/fieldModules.html
+++ b/src/main/resources/templates/Dashboard/admin/fieldModules.html
@@ -35,7 +35,7 @@
            th:href="@{/Dashboard/admin/ShowElements/{moduleId}(moduleId=${module.id})}">
           Show Elements
         </a>
-        <form th:action="@{/Dashboard/admin/deleteModule/{moduleId}(moduleId=${module.id})}" method="post" style="display: inline;">
+        <form th:action="@{'/Dashboard/admin/deleteModule/' + ${field.id} + '/' + ${module.id}}" method="post" style="display: inline;">
           <button type="submit" class="btn btn-danger mb-1" onclick="return confirm('Are you sure you want to delete this module?');">
             Delete
           </button>
